--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,12 +10,18 @@
 body {
   // padding-top: 60px;
 }
-
+// ここからheader
 header {
   padding: 15px 0;
-  // margin: 30px auto;
-  text-align: center;
 }
+header .container {
+  display: flex;
+  justify-content: space-between;
+}
+header ul {
+  display: flex;
+}
+// ここからfooter
 footer {
   margin-top: 45px;
   padding-top: 5px;
