--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,11 +1,15 @@
-<header class="navbar  navbar-inverse">
-  <div dlass="container">
+<header class="navbar navbar-inverse">
+  <div class="container">
     <%= link_to "e-shop", '/', id: "logo" %>
     <nav>
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to "Home", '/' %></li>
-        <li><%= link_to 'Products', '#' %></li>
-        <li><%= link_to 'Log in', '#' %></li>
+        <% if user_signed_in? %>
+          <li><%= link_to "Home", '/' %></li>
+          <li><%= link_to 'Products', products_path %></li>
+          <li><%= link_to 'Log in', new_user_session_path %></li>
+          <li><%= link_to 'Sign up', new_user_registration_path %></li>
+          <li><%= link_to 'Log out', destroy_user_session_path, method: :delete %></li>
+        <% end %>
       </ul>
     </nav>
   </div>
