--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,6 +9,7 @@
           <li><%= link_to 'Log in', new_user_session_path %></li>
           <li><%= link_to 'Sign up', new_user_registration_path %></li>
           <li><%= link_to 'Log out', destroy_user_session_path, method: :delete %></li>
+          <li><%= link_to 'contact', new_contact_path( user_id: current_user.id ) %></li>
         <% end %>
       </ul>
     </nav>
