[Change]contact-form

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -6,7 +6,7 @@
   <nav>
     <ul>
       <li><%= link_to "About",   '#' %></li>
-      <li><%= link_to "Contact", new_contact_path( user_id: current_user.id ) %></li>
+      <li><%= link_to "Contact", new_contact_path %></li>
     </ul>
   </nav>
 </footer>
