[Add]action-mailer

--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -23,11 +23,11 @@
             </div>
             <div class="correct-text-field">
               <%= f.label "メールアドレス" %>
-              <%= f.email_field :email, placeholder: "お名前", class: "input-form" %>
+              <%#= f.email_field :email, placeholder: "example@example.com", class: "input-form" %>
             </div>
             <div class="correct-text-field">
               <%= f.label "お電話番号" %>
-              <%= f.telephone_field :phone_number, placeholder: "お名前", class: "input-form" %>
+              <%#= f.telephone_field :phone_number, placeholder: "090-0000-0000", class: "input-form" %>
             </div>
             <div class="correct-text-field">
               <%= f.label "お問合せ内容" %>
