--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 <footer class="footer">
   <small>
     The <a href="#/">e-shop</a>
-    by <a href="#">Fumi</a>
+    by <a href="#">プロペラ企画</a>
   </small>
   <nav>
     <ul>
