--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -20,7 +20,7 @@
   </div>
   <div class="register-btn">
     <%= f.submit '送信' %>
-      <i class="fas fa-paper-plane"></i>
+      <!--<i class="fas fa-paper-plane"></i>-->
   </div>
   <div class="register-btn">
     <%= link_to "もどる", root_path, style:"background-color: #aaa" %>
